syntax = "proto3";
package fairyring.fairblock;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "fairyring/x/fairblock/types";

// Msg defines the Msg service.
service Msg {
      rpc SubmitEncryptedTx(MsgSubmitEncryptedTx) returns (MsgSubmitEncryptedTxResponse);
  rpc SendCurrentHeight(MsgSendCurrentHeight) returns (MsgSendCurrentHeightResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgSubmitEncryptedTx {
  string creator = 1;
  string data = 2;
  uint64 targetBlockHeight = 3;
}

message MsgSubmitEncryptedTxResponse {
}

message MsgSendCurrentHeight {
  string creator = 1;
  string port = 2;
  string channelID = 3;
  uint64 timeoutTimestamp = 4;
}

message MsgSendCurrentHeightResponse {
}
// this line is used by starport scaffolding # proto/tx/message
